# NKU_RSWhomework

./: .Makefile.swp  HelloWorldDemo.cpp  Makefile  Readme.md  boot.s  os.elf  qemu.sh
HW3_ROS_PubAndSub/: CMakeLists.txt  package.xml
HW3_ROS_PubAndSub/src/: RosCppPublisher.cpp  RosPySubscriber.py
MultiThreadChatPrograming/: Clients  Clients.c  Servers  Servers.c  Socket_Example.c  Socket_Server.c
OpencvDemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
OpencvDemo/src/: LoadShowPics.cpp
RbSoftWareFinalProject/: .~lock.基于语言交互的情景智能TurtleBot2-终稿.docx#
RbSoftWareFinalProject/my_dependencies/robot_voice/: CMakeLists.txt
RbSoftWareFinalProject/my_dependencies/robot_voice/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
RbSoftWareFinalProject/my_dependencies/robot_voice/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh
RbSoftWareFinalProject/my_dependencies/robot_voice/catkin_generated/installspace/: robot_voiceConfig.cmake
RbSoftWareFinalProject/my_dependencies/robot_voice/devel/: .catkin
RbSoftWareFinalProject/my_dependencies/robot_voice/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
RbSoftWareFinalProject/my_dependencies/robot_voice/scripts/: pubChinese.py
RbSoftWareFinalProject/my_dependencies/robot_voice/src/: iat_publish.cpp  linuxrec.c  tts_subscribe.cpp  voice_assistant.cpp
RbSoftWareFinalProject/my_turtlebot2_demo/scripts/: GoToForward.py  ball_follower.py  navigation_control.py  navigation_voice_control.py
(+11 files in other folders)
